experimental/parser/testdata/parser/field/incomplete.proto.stderr.txt
error: missing name in message field
  --> testdata/parser/field/incomplete.proto:20:5
   | 
20 |     name = 1;
   |     ^^^^^^^^^ 

error: missing name in message field
  --> testdata/parser/field/incomplete.proto:21:5
   | 
21 |     foo.Bar = 1;
   |     ^^^^^^^^^^^^ 

error: unexpected identifier after definition
  --> testdata/parser/field/incomplete.proto:24:5
   | 
24 |     foo.Bar name;
   |     ^^^ expected `;`

error: unexpected integer literal in definition
  --> testdata/parser/field/incomplete.proto:25:18
   | 
25 |     foo.Bar name 1;
   |                  ^ expected `=`

error: unexpected `}` after definition
  --> testdata/parser/field/incomplete.proto:27:1
   | 
27 | }
   | ^ expected `;`

encountered 5 errors
